# OpenBabelFish

./: .gitignore  README.md  pyproject.toml  run_openbabelfish.bat
openbabelfish/: cli.py  config.py  engine.py  extractors.py  managers.py
sample_documents/: corridor_essay.docx  corridor_essay.epub  corridor_essay.pptx  corridor_essay.txt  sample_book.epub  sample_slides.pptx  sample_text.txt  sample_word.docx
tests/: test_engine.py  test_extractors.py
