[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbabelfish-translate"
version = "1.0.0"
description = "Offline translation appliance with dynamic model and hardware management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["translation", "cli", "llm", "ai", "language"]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "ctranslate2>=4.0",
    "transformers>=4.40.0,<4.46.0",
    "sentencepiece>=0.2.0",
    "langid>=1.1",
    "huggingface_hub>=0.22",
    "torch>=2.0",
    "numpy<2.0.0",
    "Pillow>=9.0.0",
    "urllib3<2.0.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.21",
    "EbookLib>=0.18",
    "beautifulsoup4>=4.12.0",
    "easyocr>=1.7",
]

[project.scripts]
openbabelfish = "openbabelfish.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openbabelfish*"]
